# ReClaude-Monitor-Desktop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  forwarder.rs  lib.rs  main.rs  monitor.rs  session.rs  switcher.rs  tray.rs  tray_ring.rs  ui_config.rs  windows.rs
src/lib/: api.ts  float.ts  format.ts  monitor.svelte.ts  settings.svelte.ts  theme.ts  ui.svelte.ts
src/lib/actions/: dragOrClick.ts
src/lib/components/: AccountRow.svelte  AccountSwitcher.svelte  ActivityBars.svelte  FloatWidget.svelte  Gauge.svelte  Heatmap.svelte  HeroCard.svelte  LoadingBar.svelte  Logo.svelte  MainPanel.svelte  Modal.svelte  MonitorView.svelte  PanelWidget.svelte  Toasts.svelte  UsageView.svelte
src/lib/components/modals/: CredsModal.svelte  RemoveProfileModal.svelte  SaveProfileModal.svelte  SettingsModal.svelte  UseProfileModal.svelte
src/routes/: +page.svelte
